fix: [CDS-76708]: continue btn not visible on smaller screens in submit ticket (#17320)

--- a/src/modules/10-common/components/ResourceCenter/SubmitTicketModal/SubmitTicketModal.module.scss
+++ b/src/modules/10-common/components/ResourceCenter/SubmitTicketModal/SubmitTicketModal.module.scss
@@ -6,6 +6,7 @@
  */
 
 .submitTicketWizard {
+  min-height: 830px;
   :global {
     .ModalDialog--body {
       padding: 0 !important;
